@@ -8,16 +8,18 @@ add AMSR-E ice products and other raw binary products
 add orientation fixes for AVISO currents and similar NetCDFs lacking metadata on the internal CRS
 
 --- development version
+removed obsolete functions edge and edges (use boundaries instead)
 
 
 --- 6-March-2014, version: 2.2-31
 new functions 'meta<-' and 'meta' to set and get metadata to a Raster object. Metadata is saved to file for native format files only.
 new argument updatevalue to mask
 new function animate
-new functions corr and corrLocal
+new function corLocal
 new convenience function origin<-
 new function RGB to create Red-Green-Blue(-alpha) files.
 new intersect method for SpatialPoints with ANY(-thing from which an Extent can be extracted)
+newly exported function compareCRS
 bug fix in boundaries function with large files reported by Adrien Bayeux
 bug fix in writing multiple layers to a ncdf file if the z-value cannot be converted to numeric. Reported by Aseem Sharma
 bug fix in extract with lines and along=TRUE (reported by Robin Edwards)
@@ -54,7 +56,7 @@ added support to read NSIDC sea ice concentration binary files (southern and nor
 	https://stat.ethz.ch/pipermail/r-sig-geo/2011-October/013067.html
 bug fix in stack with with input file name vector and quick=TRUE 
 bug fix: mask with maskvalue that is not NA ignored "inverse=TRUE"
-new function "validNames" (to avoid using raster:::.goodNames by another package)
+new function "validNames" (to avoid the need for using raster:::.goodNames by another package)
 new function "flowPath"
 fixed wrong axes labels with plot( ,gridded=TRUE). Reported by Agustin Lobo
 'edge' renamed to 'edges' to avoid name overlap with igraph::edge. edge is still available for now (with a warning) for backwards compatibility
